<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/mCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/title_collapsed_style"
            app:contentScrim="@color/app_main"
            app:expandedTitleMarginStart="20dp"
            app:expandedTitleTextAppearance="@style/title_expanded_style"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="极速商城">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/large_pic"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/icon_back" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="16dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="0dp"
                        android:text="@string/about_author"
                        android:textColor="@color/colorPrimaryTextSecond"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="blog: "
                            android:textColor="@color/colorPrimaryTextSecond"
                            android:textSize="14sp"
                            tools:ignore="HardcodedText,RtlSymmetry" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/blogUrl"
                            android:textColor="@color/colorPrimaryTextSecond"
                            android:textColorLink="@color/common_blue"
                            android:textSize="14sp"
                            tools:ignore="RtlSymmetry" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="github: "
                            android:textColor="@color/colorPrimaryTextSecond"
                            android:textSize="14sp"
                            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="@string/githubUrl"
                            android:textColor="@color/colorPrimaryTextSecond"
                            android:textColorLink="@color/common_blue"
                            android:textSize="14sp"
                            tools:ignore="RtlSymmetry" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="16dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="0dp"
                        android:text="@string/about_app"
                        android:textColor="@color/colorPrimaryTextSecond"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp"
                        android:text="@string/about_app_text"
                        android:textColor="@color/colorPrimaryTextSecond"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="16dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="0dp"
                        android:text="@string/sourceCode"
                        android:textColor="@color/colorPrimaryTextSecond"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/sourceCodeUrl"
                        android:textColor="@color/colorPrimaryTextSecond"
                        android:textColorLink="@color/common_blue"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="16dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="0dp"
                        android:text="about library"
                        android:textColor="@color/colorPrimaryTextSecond"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp"
                        android:text="@string/about_library"
                        android:textColor="@color/colorPrimaryTextSecond"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>